SCSS: Fix multiple spacing issues
Remove some TODO comments in headlines. I don’t know how to resolve that
and I don’t want to invest time in that.

Increase top and bottom margin of <aside> to match the bottom margin of
<figcaption> (added in 769635d799cb). Also increase line-height. That
makes it easier to read the white font on black background.

Add some spacing to iframes (embedded videos on YouTube) and try to make
them a little bit more responsive. This doesn’t work perfect, but is
okay with much effort.

--- a/content/assets/styles/_typography.scss
+++ b/content/assets/styles/_typography.scss
@@ -12,11 +12,8 @@ body {
 /* Headlines */
 
 h1, h2, h3 {
-	// TODO: Clean multiple line headlines (look at :first-line).
 	font-family: 'Ubuntu Mono', monospace;
 	margin: 1.7em 0 1em 0;
-	// TODO: Smaller word spacings in headlines.
-	// word-spacing: 0em;
 }
 
 h1 {
@@ -42,8 +39,8 @@ h3:before { content: "### "; }
 
 /* Body Text */
 
-p, li, pre, form, figure {
-	line-height: 1.4;
+p, li, pre, form, figure, iframe {
+	line-height: 1.5;
 	margin-top: 0.9em;
 }
 
@@ -167,4 +164,9 @@ hr {
 	border: none;
 	color: $delimiter;
 	background-color: $delimiter;
+}
+
+iframe[width], iframe[height] {
+	max-width:  100%;
+	max-height: auto;
 }
